commit ebee7a8d1deff16fd8ac4dd58b88c62302e974a4
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 19:28:35 2013 +0400

    new changes

commit dbf447f7ba5dbd2ab19b4d3ceb63563b93dbf130
Merge: 3b4c582 2b9d8d7
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Jun 17 19:17:09 2013 +0400

    merge branch

commit 3b4c582e11e795fbc750b1cc70920d0667f8cfdd
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Jun 17 19:16:07 2013 +0400

    add config.py in gitignore

commit 2b9d8d7fd8ab785ffd835fa87e6817eba4921097
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 19:12:05 2013 +0400

    pass run_fast_checks

commit b493fe83bc3a83e1fb257df4695bb7d6b9e84952
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 18:30:17 2013 +0400

    rename classnames

commit f510c8761ae92b5f2ac31e26d974ad4436257eb6
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Jun 17 17:02:31 2013 +0400

    fix tests for crud clusters from cluster template vol.2

commit 95487eeeaa73a7786e2df567b8804480a86bcd19
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Jun 17 16:59:42 2013 +0400

    fix tests for crud clusters from cluster template

commit cedcbf284fde61569e27bbc8d6e5038d3b8b9b68
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 16:49:59 2013 +0400

    added changes to crud operations from node group template

commit 8845ff37e061dc27cafaf814038e8f6323232f6f
Merge: 37996c3 28379de
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 15:25:23 2013 +0400

    Merge branch 'preSF' of https://github.com/Mirantis/savanna into preSF

commit 37996c370bdb1df44f4afd80bda5e51bb28a99d3
Author: Yaroslav Lobankov <ylobankov@mirantis.com>
Date:   Mon Jun 17 15:25:00 2013 +0400

    merge

commit 28379de28bd3ef9184431657189189dc1599ef0f
Author: Vadim Rovachev <vrovachev@mirantis.com>
Date:   Mon Jun 17 14:42:30 2013 +0400

    add crud clusters from cluster templates
